--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 
 #left{
     width: 240px;
-    background-color: #f2f2f2;
+    background-color: #fff;
     height: 335px;
     border: 2px solid #000;
 }
@@ -23,8 +23,156 @@
 }
 
 #right{
-    width:128px;
+    width: 128px;
     height: 335px;
     background-color: rgb(0, 0, 106);
     border: 2px solid #000;
+}
+
+#screen{
+    width: 480px;
+    height: 240px;
+    background-color: white;
+    border: 2px solid #000;
+}
+
+#bottom{
+    width: 480px;
+    height: 25px;
+    background-color: rgb(0, 0, 96);
+    border: 2px solid #000;
+}
+
+#numbersquare{
+    width: 96px;
+    height: 96px;
+    margin: 15px;
+    background-color: #f2f2f2;
+    border: 2px solid #000;
+}
+
+#numbersquaresmall{
+    width: 20px;
+    height: 20px;
+    background-color: rgb(0, 0, 106);
+    border: 2px solid rgb(0, 0, 106);
+    margin: -2px;
+}
+
+#clock{
+    width: 192px;
+    height: 192px;
+    background-color: #fff;
+    border: 2px solid #000;
+}
+
+#text1{
+    color: rgb(0, 0, 106);
+    margin-left: -2px;
+    margin-top: 3px;
+    font-size: 70px;
+    font-weight: bold;
+}
+
+#imageunder{
+    width: 300px;
+    height: 60px;
+    margin-top: 35px;
+    margin-left: 85px;
+}
+
+#image{
+    width: 95px;
+    height: 40px;
+    margin-left: 385px;
+}
+
+#clockimage{
+    width: 230px;
+    height: 220px;
+    margin-top: 15px;
+}
+
+#intercity{
+    color: rgb(0, 0, 106);
+    margin-top: -45px;
+    margin-left: 245px;
+    font-weight: bold;
+    font-size: 35px;
+}
+
+#one{
+    color: rgb(0, 0, 106);
+    margin-top: -45px;
+    margin-left: 5px;
+    font-weight: bold;
+    font-size: 45px;
+}
+
+#minute{
+    color: rgb(0, 0, 106);
+    margin-top: -39px;
+    margin-left: 35px;
+    font-weight: bold;
+    font-size: 30px;
+}
+
+#next{
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    margin-left: 5px;
+}
+
+#next-english{
+    color: white;
+    font-weight: bold;
+    font-style: italic;
+    font-size: 20px;
+    margin-top: -23.4px;
+    margin-left: 81px;
+}
+
+#continuation{
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: -23.5px;
+    margin-left: 125px;
+}
+
+#place{
+    color: rgb(0, 0, 106);
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: -6px;
+    margin-left: 5px;
+    font-size: 45px;
+}
+
+#places{
+    color: rgb(0, 0, 106);
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: -4px;
+    margin-left: 5px;
+    font-size: 25px;
+}
+
+#tracks{
+    color: rgb(0, 0, 106);
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: -65px;
+    margin-left: 27px;
+    font-size: 10px;
+}
+
+#B{
+    color: rgb(0, 0, 106);
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: -72px;
+    margin-left: 73px;
+    font-size: 35px;
 }
